# wapm-cli

./: .gitignore  .graphqlconfig.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  azure-pipelines.yml  wapm.toml
.azure/: install-rust.yml
.cargo/: config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ---bug-report.md
.github/cross-linux-aarch64/: Dockerfile
.github/workflows/: main.yaml
assets/: largewasmfile.wapm.toml  largewasmfile.wasm
end-to-end-tests/: chunked_upload.sh  chunked_upload.txt  direct_execute.sh  direct_execute.txt  init-and-add.sh  init-and-add.txt  install.sh  install.txt  manifest-validation.sh  manifest-validation.txt  package-fs-mapping.sh  package-fs-mapping.txt  validate-global.sh  validate-global.txt  verification.sh  verification.txt
end-to-end-tests/ci/: README.md  chunked-upload.sh  direct-execution.sh  init-and-add.sh  install.sh  manifest-validation.sh  package-fs-mapping.sh  validate-global.sh  verification.sh
examples/: README  Wapm.toml
graphql/: schema.graphql
graphql/queries/: get_bindings.graphql  get_contract_version.graphql  get_package.graphql  get_package_by_command.graphql  get_package_version.graphql  get_package_version_manifest.graphql  get_packages.graphql  publish_package.graphql  publish_public_key.graphql  search.graphql  wax_get_command-pirita.graphql  wax_get_command.graphql  wax_get_package_command.graphql
lib/wapm-contract/: Cargo.toml
lib/wapm-contract/src/: contract.rs  lib.rs  parser.rs
lib/wasm-contract/: Cargo.toml  README.md
lib/wasm-contract/src/: contract.rs  lib.rs  parser.rs  validate.rs
lib/wasm-interface/: Cargo.toml  README.md
lib/wasm-interface/src/: interface.rs  interface_matcher.rs  lib.rs  parser.rs  validate.rs
src/: abi.rs  bonjour.rs  config.rs  constants.rs  contracts.rs  database.rs  dependency_resolver.rs  graphql.rs  init.rs  install.rs  interfaces.rs  keys.rs  lib.rs  lockfile.rs  logging.rs  main.rs  manifest.rs  proxy.rs  update_notifier.rs  util.rs  validate.rs
src/bonjour/: changed_manifest_packages.rs  differences.rs  installed_manifest_packages.rs  lockfile.rs  manifest.rs  mod.rs  remote.rs  resolved_manifest_packages.rs
src/cfg_toml/: manifest.rs  mod.rs
src/cfg_toml/lock/: lockfile.rs  lockfile_command.rs  lockfile_module.rs  mod.rs
src/commands/: add.rs  bin.rs  completions.rs  config.rs  execute.rs  init.rs  install.rs  keys.rs  list.rs  login.rs  logout.rs  mod.rs  publish.rs  remove.rs  run.rs  search.rs  uninstall.rs  validate.rs  whoami.rs
src/commands/bundle/: assets.rs  builder.rs  compress.rs  header.rs  mod.rs  options.rs
src/commands/package/: assets.rs  compress.rs  header.rs  mod.rs  options.rs
src/data/: manifest.rs  mod.rs  wax_index.rs
src/data/lock/: lockfile.rs  lockfile_command.rs  lockfile_module.rs  migrate.rs  mod.rs
src/dataflow/: added_packages.rs  bin_script.rs  bindings.rs  changed_manifest_packages.rs  contracts.rs  find_command_result.rs  installed_manifest_packages.rs  installed_packages.rs  interfaces.rs  local_package.rs  lockfile_packages.rs  manifest_packages.rs  merged_lockfile_packages.rs  mod.rs  pirita_packages.rs  removed_lockfile_packages.rs  removed_packages.rs  resolved_manifest_packages.rs  resolved_packages.rs  retained_lockfile_packages.rs
src/integration_tests/: add_remove_init.rs  data.rs  mod.rs  prelude.rs
src/lock/: lockfile.rs  lockfile_command.rs  lockfile_module.rs  mod.rs
src/sql/: mod.rs
src/sql/migrations/: 0000.sql
src/sql/queries/: delete_personal_key_pair.sql  get_contract.sql  get_latest_public_key_for_user.sql  get_personal_keys.sql  get_wapm_public_keys.sql  insert_and_activate_personal_key_pair.sql  insert_contract.sql  insert_user.sql  insert_wapm_public_key.sql  personal_public_key_value_existence_check.sql  private_key_location_exists.sql  wapm_public_key_existence_check.sql  wasm_contract_existence_check.sql
wapm-resolve-url/: Cargo.toml
wapm-resolve-url/graphql/: query-url-of-file-pirita.graphql  query-url-of-file-targz.graphql
wapm-resolve-url/src/: graphql.rs  lib.rs  proxy.rs
wapm-toml/: Cargo.toml
wapm-toml/src/: lib.rs
