[package]
name = "wapm-cli"
version = "0.5.3"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
repository = "https://github.com/wasmerio/wapm-cli"
description = "WebAssembly Package Manager CLI"
license = "MIT"

[dependencies]
billboard = { version = "0.1.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }
colored = { version = "1.8", optional = true }
dirs = { version = "1", optional = true }
anyhow = "1"
thiserror = "1.0"
fern = {version = "0.6", features = ["colored"]}
flate2 = "1.0.7"
graphql_client = "0.9"
lazy_static = "1.3"
license-exprs = "1.4.0"
log = "0.4"
maplit = { version = "1", optional = true }
minisign = "0.5"
prettytable-rs = { version = "0.8.0", optional = true }
regex = "1"
rpassword-wasi = "5"
rusqlite = { version = "0.24", optional = true }
semver = { version = "0.11", features = ["serde"] }
sentry = { version = "0.22.0", optional = true, features = ["anyhow", "panic", "backtrace"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", features = ["color"] }
tempfile = "3"
time = "0.1"
toml = "0.5.6"
url = "2"
wasmer-wasm-interface = { version = "0.1.0", path = "lib/wasm-interface" }
wasmparser = "0.51.4"
dialoguer = "0.4.0"
hex = { version = "0.4", optional = true }
blake3 = { version = "0.3.1", optional = true }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
whoami = "1.1.5"
atty = "0.2"
reqwest = { version = "0.11.0", features = ["native-tls-vendored", "blocking", "json", "gzip","socks","multipart"], optional = true }
tar = { version = "0.4" }

[target.'cfg(target_os = "wasi")'.dependencies]
whoami = "0.5"
wasm-bus-reqwest = "1.0"
wasm-bus-process = "1.0"
getrandom = "0.2.3"
tar = { package = "tar-wasi", version = "0.4" }
serde_yaml = { version = "^0.8" }

[dev-dependencies]
tempfile = "3"

[workspace]
members = [
   ".",
   "lib/wasm-interface"
]

[features]
default = ["full","packagesigning", "sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
telemetry = ["sentry"]
update-notifications= ["billboard", "colored"]
prehash-module = ["hex", "blake3"]
packagesigning = []#[cfg(feature = "full")]
integration_tests = ["maplit"]
full = [ "dirs", "rusqlite", "prettytable-rs", "reqwest" ]
