[package]
name = "wapm-cli"
version = "0.5.5"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
repository = "https://github.com/wasmerio/wapm-cli"
description = "WebAssembly Package Manager CLI"
license = "MIT"

[dependencies]
billboard = { version = "0.1.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }
colored = { version = "1.8", optional = true }
dirs = { version = "4", optional = true }
anyhow = "1"
thiserror = "1.0"
fern = {version = "0.6", features = ["colored"]}
flate2 = "1.0.7"
graphql_client = "0.9"
lazy_static = "1.3"
license-exprs = "1.4.0"
log = "0.4"
maplit = { version = "1", optional = true }
minisign = "0.5"
prettytable-rs = { version = "0.8.0", optional = true }
regex = "1"
rpassword-wasi = "5"
rusqlite = { version = "0.24", optional = true }
semver = { version = "0.11", features = ["serde"] }
sentry = { version = "0.22.0", optional = true, features = ["anyhow", "panic", "backtrace"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", features = ["color"] }
tempfile = "3"
time = "0.1"
toml = "0.5.6"
url = "2"
wapm-toml = { version = "0.1.0", path = "./wapm-toml" }
wasmer-wasm-interface = { version = "0.1.0", path = "lib/wasm-interface" }
wasmparser = "0.51.4"
hex = { version = "0.4", optional = true }
blake3 = { version = "0.3.1", optional = true }
indicatif = "0.16.2"
dialoguer = "0.10.1"
shellwords = "1.1.0"
whoami = "1.2.1"
wapm-resolve-url = { version = "0.1.0", path = "./wapm-resolve-url" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
atty = "0.2"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls", "blocking"], optional = true }
tar = { version = "0.4" }
tokio = { version = "1.19.2", features = ["full"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasm-bus-reqwest = "1.0"
wasm-bus-process = "1.0"
getrandom = "0.2.3"
tar = { package = "tar-wasi", version = "0.4" }
serde_yaml = { version = "^0.8" }

# Due to issues with SSH, the URL has to be in HTTPS format
[dependencies.pirita]
git = "https://github.com/wasmerio/pirita.git"
rev = "39b90ff364337b60b38047f53e1ef3db3fdbd125"
default-features = false
features = ["autoconvert"]
optional = true

[dev-dependencies]
tempfile = "3"

[workspace]
members = [
   ".",
   "lib/wasm-interface"
]

[features]
default = ["full","packagesigning", "sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
telemetry = ["sentry"]
pirita_file = ["pirita"]
update-notifications= ["billboard", "colored"]
prehash-module = ["hex", "blake3"]
packagesigning = []#[cfg(feature = "full")]
integration_tests = ["maplit", "wapm-toml/integration_tests"]
full = [ "dirs", "rusqlite", "prettytable-rs", "reqwest" ]
