[package]
name = "wapm-resolve-url"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"
graphql_client = "0.9"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0.81"
whoami = "1.2.1"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls", "blocking", "json", "gzip","socks", "multipart"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasm-bus-reqwest = "0.1.0"
wasm-bus-process = "0.1.0"
