[package]
name = "wasm-interface"
version = "0.0.2"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
repository = "https://github.com/wasmerio/wapm-cli"
description = "WASM Interface definition and parser"
license = "MIT"

[dependencies]
nom = "5.0.0"
wasmparser = { version = "0.32", optional = true }

[dev-dependencies]
wabt = "0.7"

[features]
validation = ["wasmparser"]
default = ["validation"]
